Fixed UI issues on mobile devices where the background image wouldn't work correctly

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@ html {
     background-image: url('https://wallpaperaccess.com/full/1077152.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
     width: 100%;
 
 }
@@ -189,11 +188,8 @@ html {
 
 @media screen and (max-width:1000px) {
     body {
-        background-image: url('https://wallpaperaccess.com/full/1077152.jpg');
-        background-size: cover;
+        background-repeat: no-repeat;
         background-attachment: fixed;
-        width: 100%;
-        height: 100%;
     }
 
     .navbar-btns {
@@ -211,13 +207,13 @@ html {
     }
     
     .movietd {
-        width: 95vw;
+        width: 100%;
         height: 6rem;
 
     }
 
     .moviedetails {
-        display: block;
+        display: unset;
         width: 100vw;
     }
 
